# virtual-klipper-printer

./: .gitignore  docker-compose.yml
.claude/agents/: python-websocket-expert.md
nominal/: justfile  pyproject.toml
nominal/examples/: moonraker_background_worker.py  smoke_test.py  stream_all.py  video_stream.py
nominal/nominal_moonraker/: __init__.py  client.py  driver.py  moonraker.py  video.py
nominal/nominal_moonraker/objects/: __init__.py  base.py  definitions.py  registry.py
nominal/scripts/: wait_for_ready.sh
